
[TestEquipmentPopulator - 1]
[
 {
  "category_range": "Simple Melee",
  "cost": {
   "quantity": 1,
   "unit": "sp"
  },
  "damage": {
   "damage_dice": "1d4",
   "damage_type": {
    "index": "bludgeoning"
   }
  },
  "equipment_category": {
   "index": "weapon"
  },
  "index": "club",
  "name": "Club",
  "properties": [
   {
    "index": "weap-light"
   },
   {
    "index": "weap-monk"
   }
  ],
  "range": {
   "normal": 5
  },
  "throw_range": {
   "normal": 0
  },
  "weapon_category": "Simple",
  "weapon_range": "Melee",
  "weight": 2
 }
]
---

[TestEquipmentPopulatorFull - 1]
[
 {
  "cost": {
   "id": 42949672961,
   "quantity": 1
  },
  "equipment_category": "WEAPON",
  "id": 51539607553,
  "indx": "club",
  "name": "Club",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949672962,
   "quantity": 2
  },
  "equipment_category": "WEAPON",
  "id": 51539607554,
  "indx": "dagger",
  "name": "Dagger",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949672963,
   "quantity": 2
  },
  "equipment_category": "WEAPON",
  "id": 51539607555,
  "indx": "greatclub",
  "name": "Greatclub",
  "weight": 10
 },
 {
  "cost": {
   "id": 42949672964,
   "quantity": 5
  },
  "equipment_category": "WEAPON",
  "id": 51539607556,
  "indx": "handaxe",
  "name": "Handaxe",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949672965,
   "quantity": 5
  },
  "equipment_category": "WEAPON",
  "id": 51539607557,
  "indx": "javelin",
  "name": "Javelin",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949672966,
   "quantity": 2
  },
  "equipment_category": "WEAPON",
  "id": 51539607558,
  "indx": "light-hammer",
  "name": "Light hammer",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949672967,
   "quantity": 5
  },
  "equipment_category": "WEAPON",
  "id": 51539607559,
  "indx": "mace",
  "name": "Mace",
  "weight": 4
 },
 {
  "cost": {
   "id": 42949672968,
   "quantity": 2
  },
  "equipment_category": "WEAPON",
  "id": 51539607560,
  "indx": "quarterstaff",
  "name": "Quarterstaff",
  "weight": 4
 },
 {
  "cost": {
   "id": 42949672969,
   "quantity": 1
  },
  "equipment_category": "WEAPON",
  "id": 51539607561,
  "indx": "sickle",
  "name": "Sickle",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949672970,
   "quantity": 1
  },
  "equipment_category": "WEAPON",
  "id": 51539607562,
  "indx": "spear",
  "name": "Spear",
  "weight": 3
 },
 {
  "cost": {
   "id": 42949672971,
   "quantity": 25
  },
  "equipment_category": "WEAPON",
  "id": 51539607563,
  "indx": "crossbow-light",
  "name": "Crossbow, light",
  "weight": 5
 },
 {
  "cost": {
   "id": 42949672972,
   "quantity": 5
  },
  "equipment_category": "WEAPON",
  "id": 51539607564,
  "indx": "dart",
  "name": "Dart",
  "weight": 0.25
 },
 {
  "cost": {
   "id": 42949672973,
   "quantity": 25
  },
  "equipment_category": "WEAPON",
  "id": 51539607565,
  "indx": "shortbow",
  "name": "Shortbow",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949672974,
   "quantity": 1
  },
  "equipment_category": "WEAPON",
  "id": 51539607566,
  "indx": "sling",
  "name": "Sling"
 },
 {
  "cost": {
   "id": 42949672975,
   "quantity": 10
  },
  "equipment_category": "WEAPON",
  "id": 51539607567,
  "indx": "battleaxe",
  "name": "Battleaxe",
  "weight": 4
 },
 {
  "cost": {
   "id": 42949672976,
   "quantity": 10
  },
  "equipment_category": "WEAPON",
  "id": 51539607568,
  "indx": "flail",
  "name": "Flail",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949672977,
   "quantity": 20
  },
  "equipment_category": "WEAPON",
  "id": 51539607569,
  "indx": "glaive",
  "name": "Glaive",
  "weight": 6
 },
 {
  "cost": {
   "id": 42949672978,
   "quantity": 30
  },
  "equipment_category": "WEAPON",
  "id": 51539607570,
  "indx": "greataxe",
  "name": "Greataxe",
  "weight": 7
 },
 {
  "cost": {
   "id": 42949672979,
   "quantity": 50
  },
  "equipment_category": "WEAPON",
  "id": 51539607571,
  "indx": "greatsword",
  "name": "Greatsword",
  "weight": 6
 },
 {
  "cost": {
   "id": 42949672980,
   "quantity": 20
  },
  "equipment_category": "WEAPON",
  "id": 51539607572,
  "indx": "halberd",
  "name": "Halberd",
  "weight": 6
 },
 {
  "cost": {
   "id": 42949672981,
   "quantity": 10
  },
  "equipment_category": "WEAPON",
  "id": 51539607573,
  "indx": "lance",
  "name": "Lance",
  "weight": 6
 },
 {
  "cost": {
   "id": 42949672982,
   "quantity": 15
  },
  "equipment_category": "WEAPON",
  "id": 51539607574,
  "indx": "longsword",
  "name": "Longsword",
  "weight": 3
 },
 {
  "cost": {
   "id": 42949672983,
   "quantity": 10
  },
  "equipment_category": "WEAPON",
  "id": 51539607575,
  "indx": "maul",
  "name": "Maul",
  "weight": 10
 },
 {
  "cost": {
   "id": 42949672984,
   "quantity": 15
  },
  "equipment_category": "WEAPON",
  "id": 51539607576,
  "indx": "morningstar",
  "name": "Morningstar",
  "weight": 4
 },
 {
  "cost": {
   "id": 42949672985,
   "quantity": 5
  },
  "equipment_category": "WEAPON",
  "id": 51539607577,
  "indx": "pike",
  "name": "Pike",
  "weight": 18
 },
 {
  "cost": {
   "id": 42949672986,
   "quantity": 25
  },
  "equipment_category": "WEAPON",
  "id": 51539607578,
  "indx": "rapier",
  "name": "Rapier",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949672987,
   "quantity": 25
  },
  "equipment_category": "WEAPON",
  "id": 51539607579,
  "indx": "scimitar",
  "name": "Scimitar",
  "weight": 3
 },
 {
  "cost": {
   "id": 42949672988,
   "quantity": 10
  },
  "equipment_category": "WEAPON",
  "id": 51539607580,
  "indx": "shortsword",
  "name": "Shortsword",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949672989,
   "quantity": 5
  },
  "equipment_category": "WEAPON",
  "id": 51539607581,
  "indx": "trident",
  "name": "Trident",
  "weight": 4
 },
 {
  "cost": {
   "id": 42949672990,
   "quantity": 5
  },
  "equipment_category": "WEAPON",
  "id": 51539607582,
  "indx": "war-pick",
  "name": "War pick",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949672991,
   "quantity": 15
  },
  "equipment_category": "WEAPON",
  "id": 51539607583,
  "indx": "warhammer",
  "name": "Warhammer",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949672992,
   "quantity": 2
  },
  "equipment_category": "WEAPON",
  "id": 51539607584,
  "indx": "whip",
  "name": "Whip",
  "weight": 3
 },
 {
  "cost": {
   "id": 42949672993,
   "quantity": 10
  },
  "equipment_category": "WEAPON",
  "id": 51539607585,
  "indx": "blowgun",
  "name": "Blowgun",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949672994,
   "quantity": 75
  },
  "equipment_category": "WEAPON",
  "id": 51539607586,
  "indx": "crossbow-hand",
  "name": "Crossbow, hand",
  "weight": 3
 },
 {
  "cost": {
   "id": 42949672995,
   "quantity": 50
  },
  "equipment_category": "WEAPON",
  "id": 51539607587,
  "indx": "crossbow-heavy",
  "name": "Crossbow, heavy",
  "weight": 18
 },
 {
  "cost": {
   "id": 42949672996,
   "quantity": 50
  },
  "equipment_category": "WEAPON",
  "id": 51539607588,
  "indx": "longbow",
  "name": "Longbow",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949672997,
   "quantity": 1
  },
  "equipment_category": "WEAPON",
  "id": 51539607589,
  "indx": "net",
  "name": "Net",
  "weight": 3
 },
 {
  "cost": {
   "id": 42949672998,
   "quantity": 5
  },
  "equipment_category": "ARMOR",
  "id": 51539607590,
  "indx": "padded-armor",
  "name": "Padded Armor",
  "weight": 8
 },
 {
  "cost": {
   "id": 42949672999,
   "quantity": 10
  },
  "equipment_category": "ARMOR",
  "id": 51539607591,
  "indx": "leather-armor",
  "name": "Leather Armor",
  "weight": 10
 },
 {
  "cost": {
   "id": 42949673000,
   "quantity": 45
  },
  "equipment_category": "ARMOR",
  "id": 51539607592,
  "indx": "studded-leather-armor",
  "name": "Studded Leather Armor",
  "weight": 13
 },
 {
  "cost": {
   "id": 42949673001,
   "quantity": 10
  },
  "equipment_category": "ARMOR",
  "id": 51539607593,
  "indx": "hide-armor",
  "name": "Hide Armor",
  "weight": 12
 },
 {
  "cost": {
   "id": 42949673002,
   "quantity": 50
  },
  "equipment_category": "ARMOR",
  "id": 51539607594,
  "indx": "chain-shirt",
  "name": "Chain Shirt",
  "weight": 20
 },
 {
  "cost": {
   "id": 42949673003,
   "quantity": 50
  },
  "equipment_category": "ARMOR",
  "id": 51539607595,
  "indx": "scale-mail",
  "name": "Scale Mail",
  "weight": 45
 },
 {
  "cost": {
   "id": 42949673004,
   "quantity": 400
  },
  "equipment_category": "ARMOR",
  "id": 51539607596,
  "indx": "breastplate",
  "name": "Breastplate",
  "weight": 20
 },
 {
  "cost": {
   "id": 42949673005,
   "quantity": 750
  },
  "equipment_category": "ARMOR",
  "id": 51539607597,
  "indx": "half-plate-armor",
  "name": "Half Plate Armor",
  "weight": 40
 },
 {
  "cost": {
   "id": 42949673006,
   "quantity": 30
  },
  "equipment_category": "ARMOR",
  "id": 51539607598,
  "indx": "ring-mail",
  "name": "Ring Mail",
  "weight": 40
 },
 {
  "cost": {
   "id": 42949673007,
   "quantity": 75
  },
  "equipment_category": "ARMOR",
  "id": 51539607599,
  "indx": "chain-mail",
  "name": "Chain Mail",
  "weight": 55
 },
 {
  "cost": {
   "id": 42949673008,
   "quantity": 200
  },
  "equipment_category": "ARMOR",
  "id": 51539607600,
  "indx": "splint-armor",
  "name": "Splint Armor",
  "weight": 60
 },
 {
  "cost": {
   "id": 42949673009,
   "quantity": 1500
  },
  "equipment_category": "ARMOR",
  "id": 51539607601,
  "indx": "plate-armor",
  "name": "Plate Armor",
  "weight": 65
 },
 {
  "cost": {
   "id": 42949673010,
   "quantity": 10
  },
  "equipment_category": "ARMOR",
  "id": 51539607602,
  "indx": "shield",
  "name": "Shield",
  "weight": 6
 },
 {
  "cost": {
   "id": 42949673011,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607603,
  "indx": "abacus",
  "name": "Abacus",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673012,
   "quantity": 25
  },
  "equipment_category": "GEAR",
  "id": 51539607604,
  "indx": "acid-vial",
  "name": "Acid (vial)",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673013,
   "quantity": 50
  },
  "equipment_category": "GEAR",
  "id": 51539607605,
  "indx": "alchemists-fire-flask",
  "name": "Alchemist's fire (flask)",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673014
  },
  "equipment_category": "GEAR",
  "id": 51539607606,
  "indx": "alms-box",
  "name": "Alms box"
 },
 {
  "cost": {
   "id": 42949673015,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607607,
  "indx": "arrow",
  "name": "Arrow",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673016
  },
  "equipment_category": "GEAR",
  "id": 51539607608,
  "indx": "block-of-incense",
  "name": "Block of incense"
 },
 {
  "cost": {
   "id": 42949673017,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607609,
  "indx": "blowgun-needle",
  "name": "Blowgun needle",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673018
  },
  "equipment_category": "GEAR",
  "id": 51539607610,
  "indx": "censer",
  "name": "Censer"
 },
 {
  "cost": {
   "id": 42949673019,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607611,
  "indx": "crossbow-bolt",
  "name": "Crossbow bolt",
  "weight": 1.5
 },
 {
  "cost": {
   "id": 42949673020,
   "quantity": 4
  },
  "equipment_category": "GEAR",
  "id": 51539607612,
  "indx": "sling-bullet",
  "name": "Sling bullet",
  "weight": 1.5
 },
 {
  "cost": {
   "id": 42949673021,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607613,
  "indx": "amulet",
  "name": "Amulet",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673022,
   "quantity": 50
  },
  "equipment_category": "GEAR",
  "id": 51539607614,
  "indx": "antitoxin-vial",
  "name": "Antitoxin (vial)"
 },
 {
  "cost": {
   "id": 42949673023,
   "quantity": 10
  },
  "equipment_category": "GEAR",
  "id": 51539607615,
  "indx": "crystal",
  "name": "Crystal",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673024,
   "quantity": 20
  },
  "equipment_category": "GEAR",
  "id": 51539607616,
  "indx": "orb",
  "name": "Orb",
  "weight": 3
 },
 {
  "cost": {
   "id": 42949673025,
   "quantity": 10
  },
  "equipment_category": "GEAR",
  "id": 51539607617,
  "indx": "rod",
  "name": "Rod",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673026,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607618,
  "indx": "staff",
  "name": "Staff",
  "weight": 4
 },
 {
  "cost": {
   "id": 42949673027,
   "quantity": 10
  },
  "equipment_category": "GEAR",
  "id": 51539607619,
  "indx": "wand",
  "name": "Wand",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673028,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607620,
  "indx": "backpack",
  "name": "Backpack",
  "weight": 5
 },
 {
  "cost": {
   "id": 42949673029,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607621,
  "indx": "ball-bearings-bag-of-1000",
  "name": "Ball bearings (bag of 1,000)",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673030,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607622,
  "indx": "barrel",
  "name": "Barrel",
  "weight": 70
 },
 {
  "cost": {
   "id": 42949673031,
   "quantity": 4
  },
  "equipment_category": "GEAR",
  "id": 51539607623,
  "indx": "basket",
  "name": "Basket",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673032,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607624,
  "indx": "bedroll",
  "name": "Bedroll",
  "weight": 7
 },
 {
  "cost": {
   "id": 42949673033,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607625,
  "indx": "bell",
  "name": "Bell"
 },
 {
  "cost": {
   "id": 42949673034,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607626,
  "indx": "blanket",
  "name": "Blanket",
  "weight": 3
 },
 {
  "cost": {
   "id": 42949673035,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607627,
  "indx": "block-and-tackle",
  "name": "Block and tackle",
  "weight": 5
 },
 {
  "cost": {
   "id": 42949673036,
   "quantity": 25
  },
  "equipment_category": "GEAR",
  "id": 51539607628,
  "indx": "book",
  "name": "Book",
  "weight": 5
 },
 {
  "cost": {
   "id": 42949673037,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607629,
  "indx": "bottle-glass",
  "name": "Bottle, glass",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673038,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607630,
  "indx": "bucket",
  "name": "Bucket",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673039,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607631,
  "indx": "caltrops",
  "name": "Caltrops",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673040,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607632,
  "indx": "candle",
  "name": "Candle"
 },
 {
  "cost": {
   "id": 42949673041,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607633,
  "indx": "case-crossbow-bolt",
  "name": "Case, crossbow bolt",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673042,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607634,
  "indx": "case-map-or-scroll",
  "name": "Case, map or scroll",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673043,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607635,
  "indx": "chain-10-feet",
  "name": "Chain (10 feet)",
  "weight": 10
 },
 {
  "cost": {
   "id": 42949673044,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607636,
  "indx": "chalk-1-piece",
  "name": "Chalk (1 piece)"
 },
 {
  "cost": {
   "id": 42949673045,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607637,
  "indx": "chest",
  "name": "Chest",
  "weight": 25
 },
 {
  "cost": {
   "id": 42949673046,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607638,
  "indx": "clothes-common",
  "name": "Clothes, common",
  "weight": 3
 },
 {
  "cost": {
   "id": 42949673047,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607639,
  "indx": "clothes-costume",
  "name": "Clothes, costume",
  "weight": 4
 },
 {
  "cost": {
   "id": 42949673048,
   "quantity": 15
  },
  "equipment_category": "GEAR",
  "id": 51539607640,
  "indx": "clothes-fine",
  "name": "Clothes, fine",
  "weight": 6
 },
 {
  "cost": {
   "id": 42949673049,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607641,
  "indx": "clothes-travelers",
  "name": "Clothes, traveler's",
  "weight": 4
 },
 {
  "cost": {
   "id": 42949673050,
   "quantity": 25
  },
  "equipment_category": "GEAR",
  "id": 51539607642,
  "indx": "component-pouch",
  "name": "Component pouch",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673051,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607643,
  "indx": "crowbar",
  "name": "Crowbar",
  "weight": 5
 },
 {
  "cost": {
   "id": 42949673052,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607644,
  "indx": "sprig-of-mistletoe",
  "name": "Sprig of mistletoe"
 },
 {
  "cost": {
   "id": 42949673053,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607645,
  "indx": "totem",
  "name": "Totem"
 },
 {
  "cost": {
   "id": 42949673054,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607646,
  "indx": "wooden-staff",
  "name": "Wooden staff",
  "weight": 4
 },
 {
  "cost": {
   "id": 42949673055,
   "quantity": 10
  },
  "equipment_category": "GEAR",
  "id": 51539607647,
  "indx": "yew-wand",
  "name": "Yew wand",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673056,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607648,
  "indx": "emblem",
  "name": "Emblem"
 },
 {
  "cost": {
   "id": 42949673057,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607649,
  "indx": "fishing-tackle",
  "name": "Fishing tackle",
  "weight": 4
 },
 {
  "cost": {
   "id": 42949673058,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607650,
  "indx": "flask-or-tankard",
  "name": "Flask or tankard",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673059,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607651,
  "indx": "grappling-hook",
  "name": "Grappling hook",
  "weight": 4
 },
 {
  "cost": {
   "id": 42949673060,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607652,
  "indx": "hammer",
  "name": "Hammer",
  "weight": 3
 },
 {
  "cost": {
   "id": 42949673061,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607653,
  "indx": "hammer-sledge",
  "name": "Hammer, sledge",
  "weight": 10
 },
 {
  "cost": {
   "id": 42949673062,
   "quantity": 25
  },
  "equipment_category": "GEAR",
  "id": 51539607654,
  "indx": "holy-water-flask",
  "name": "Holy water (flask)",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673063,
   "quantity": 25
  },
  "equipment_category": "GEAR",
  "id": 51539607655,
  "indx": "hourglass",
  "name": "Hourglass",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673064,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607656,
  "indx": "hunting-trap",
  "name": "Hunting trap",
  "weight": 25
 },
 {
  "cost": {
   "id": 42949673065,
   "quantity": 10
  },
  "equipment_category": "GEAR",
  "id": 51539607657,
  "indx": "ink-1-ounce-bottle",
  "name": "Ink (1 ounce bottle)"
 },
 {
  "cost": {
   "id": 42949673066,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607658,
  "indx": "ink-pen",
  "name": "Ink pen"
 },
 {
  "cost": {
   "id": 42949673067,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607659,
  "indx": "jug-or-pitcher",
  "name": "Jug or pitcher",
  "weight": 4
 },
 {
  "cost": {
   "id": 42949673068,
   "quantity": 25
  },
  "equipment_category": "GEAR",
  "id": 51539607660,
  "indx": "climbers-kit",
  "name": "Climber's Kit",
  "weight": 12
 },
 {
  "cost": {
   "id": 42949673069,
   "quantity": 25
  },
  "equipment_category": "GEAR",
  "id": 51539607661,
  "indx": "disguise-kit",
  "name": "Disguise Kit",
  "weight": 3
 },
 {
  "cost": {
   "id": 42949673070,
   "quantity": 15
  },
  "equipment_category": "GEAR",
  "id": 51539607662,
  "indx": "forgery-kit",
  "name": "Forgery Kit",
  "weight": 5
 },
 {
  "cost": {
   "id": 42949673071,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607663,
  "indx": "herbalism-kit",
  "name": "Herbalism Kit",
  "weight": 3
 },
 {
  "cost": {
   "id": 42949673072,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607664,
  "indx": "healers-kit",
  "name": "Healer's Kit",
  "weight": 3
 },
 {
  "cost": {
   "id": 42949673073,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607665,
  "indx": "mess-kit",
  "name": "Mess Kit",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673074,
   "quantity": 50
  },
  "equipment_category": "GEAR",
  "id": 51539607666,
  "indx": "poisoners-kit",
  "name": "Poisoner's Kit",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673075,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607667,
  "indx": "ladder-10-foot",
  "name": "Ladder (10-foot)",
  "weight": 25
 },
 {
  "cost": {
   "id": 42949673076,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607668,
  "indx": "lamp",
  "name": "Lamp",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673077,
   "quantity": 10
  },
  "equipment_category": "GEAR",
  "id": 51539607669,
  "indx": "lantern-bullseye",
  "name": "Lantern, bullseye",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673078,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607670,
  "indx": "lantern-hooded",
  "name": "Lantern, hooded",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673079
  },
  "equipment_category": "GEAR",
  "id": 51539607671,
  "indx": "little-bag-of-sand",
  "name": "Little bag of sand"
 },
 {
  "cost": {
   "id": 42949673080,
   "quantity": 10
  },
  "equipment_category": "GEAR",
  "id": 51539607672,
  "indx": "lock",
  "name": "Lock",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673081,
   "quantity": 100
  },
  "equipment_category": "GEAR",
  "id": 51539607673,
  "indx": "magnifying-glass",
  "name": "Magnifying glass"
 },
 {
  "cost": {
   "id": 42949673082,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607674,
  "indx": "manacles",
  "name": "Manacles",
  "weight": 6
 },
 {
  "cost": {
   "id": 42949673083,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607675,
  "indx": "mirror-steel",
  "name": "Mirror, steel",
  "weight": 0.5
 },
 {
  "cost": {
   "id": 42949673084,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607676,
  "indx": "oil-flask",
  "name": "Oil (flask)",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673085,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607677,
  "indx": "paper-one-sheet",
  "name": "Paper (one sheet)"
 },
 {
  "cost": {
   "id": 42949673086,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607678,
  "indx": "parchment-one-sheet",
  "name": "Parchment (one sheet)"
 },
 {
  "cost": {
   "id": 42949673087,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607679,
  "indx": "perfume-vial",
  "name": "Perfume (vial)"
 },
 {
  "cost": {
   "id": 42949673088,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607680,
  "indx": "pick-miners",
  "name": "Pick, miner's",
  "weight": 10
 },
 {
  "cost": {
   "id": 42949673089,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607681,
  "indx": "piton",
  "name": "Piton",
  "weight": 0.25
 },
 {
  "cost": {
   "id": 42949673090,
   "quantity": 100
  },
  "equipment_category": "GEAR",
  "id": 51539607682,
  "indx": "poison-basic-vial",
  "name": "Poison, basic (vial)"
 },
 {
  "cost": {
   "id": 42949673091,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607683,
  "indx": "pole-10-foot",
  "name": "Pole (10-foot)",
  "weight": 7
 },
 {
  "cost": {
   "id": 42949673092,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607684,
  "indx": "pot-iron",
  "name": "Pot, iron",
  "weight": 10
 },
 {
  "cost": {
   "id": 42949673093,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607685,
  "indx": "pouch",
  "name": "Pouch",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673094,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607686,
  "indx": "quiver",
  "name": "Quiver",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673095,
   "quantity": 4
  },
  "equipment_category": "GEAR",
  "id": 51539607687,
  "indx": "ram-portable",
  "name": "Ram, portable",
  "weight": 35
 },
 {
  "cost": {
   "id": 42949673096,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607688,
  "indx": "rations-1-day",
  "name": "Rations (1 day)",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673097,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607689,
  "indx": "reliquary",
  "name": "Reliquary",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673098,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607690,
  "indx": "robes",
  "name": "Robes",
  "weight": 4
 },
 {
  "cost": {
   "id": 42949673099,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607691,
  "indx": "rope-hempen-50-feet",
  "name": "Rope, hempen (50 feet)",
  "weight": 10
 },
 {
  "cost": {
   "id": 42949673100,
   "quantity": 10
  },
  "equipment_category": "GEAR",
  "id": 51539607692,
  "indx": "rope-silk-50-feet",
  "name": "Rope, silk (50 feet)",
  "weight": 5
 },
 {
  "cost": {
   "id": 42949673101,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607693,
  "indx": "sack",
  "name": "Sack",
  "weight": 0.5
 },
 {
  "cost": {
   "id": 42949673102,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607694,
  "indx": "scale-merchants",
  "name": "Scale, merchant's",
  "weight": 3
 },
 {
  "cost": {
   "id": 42949673103,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607695,
  "indx": "sealing-wax",
  "name": "Sealing wax"
 },
 {
  "cost": {
   "id": 42949673104,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607696,
  "indx": "shovel",
  "name": "Shovel",
  "weight": 5
 },
 {
  "cost": {
   "id": 42949673105,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607697,
  "indx": "signal-whistle",
  "name": "Signal whistle"
 },
 {
  "cost": {
   "id": 42949673106,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607698,
  "indx": "signet-ring",
  "name": "Signet ring"
 },
 {
  "cost": {
   "id": 42949673107
  },
  "equipment_category": "GEAR",
  "id": 51539607699,
  "indx": "small-knife",
  "name": "Small knife"
 },
 {
  "cost": {
   "id": 42949673108,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607700,
  "indx": "soap",
  "name": "Soap"
 },
 {
  "cost": {
   "id": 42949673109,
   "quantity": 50
  },
  "equipment_category": "GEAR",
  "id": 51539607701,
  "indx": "spellbook",
  "name": "Spellbook",
  "weight": 3
 },
 {
  "cost": {
   "id": 42949673110,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607702,
  "indx": "spike-iron",
  "name": "Spike, iron",
  "weight": 5
 },
 {
  "cost": {
   "id": 42949673111,
   "quantity": 1000
  },
  "equipment_category": "GEAR",
  "id": 51539607703,
  "indx": "spyglass",
  "name": "Spyglass",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673112
  },
  "equipment_category": "GEAR",
  "id": 51539607704,
  "indx": "string-10-feet",
  "name": "String (10 feet)"
 },
 {
  "cost": {
   "id": 42949673113,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607705,
  "indx": "tent-two-person",
  "name": "Tent, two-person",
  "weight": 20
 },
 {
  "cost": {
   "id": 42949673114,
   "quantity": 5
  },
  "equipment_category": "GEAR",
  "id": 51539607706,
  "indx": "tinderbox",
  "name": "Tinderbox",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673115,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607707,
  "indx": "torch",
  "name": "Torch",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673116
  },
  "equipment_category": "GEAR",
  "id": 51539607708,
  "indx": "vestments",
  "name": "Vestments"
 },
 {
  "cost": {
   "id": 42949673117,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607709,
  "indx": "vial",
  "name": "Vial"
 },
 {
  "cost": {
   "id": 42949673118,
   "quantity": 2
  },
  "equipment_category": "GEAR",
  "id": 51539607710,
  "indx": "waterskin",
  "name": "Waterskin",
  "weight": 5
 },
 {
  "cost": {
   "id": 42949673119,
   "quantity": 1
  },
  "equipment_category": "GEAR",
  "id": 51539607711,
  "indx": "whetstone",
  "name": "Whetstone",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673120,
   "quantity": 16
  },
  "equipment_category": "GEAR",
  "id": 51539607712,
  "indx": "burglars-pack",
  "name": "Burglar's Pack"
 },
 {
  "cost": {
   "id": 42949673121,
   "quantity": 39
  },
  "equipment_category": "GEAR",
  "id": 51539607713,
  "indx": "diplomats-pack",
  "name": "Diplomat's Pack"
 },
 {
  "cost": {
   "id": 42949673122,
   "quantity": 12
  },
  "equipment_category": "GEAR",
  "id": 51539607714,
  "indx": "dungeoneers-pack",
  "name": "Dungeoneer's Pack"
 },
 {
  "cost": {
   "id": 42949673123,
   "quantity": 40
  },
  "equipment_category": "GEAR",
  "id": 51539607715,
  "indx": "entertainers-pack",
  "name": "Entertainer's Pack"
 },
 {
  "cost": {
   "id": 42949673124,
   "quantity": 10
  },
  "equipment_category": "GEAR",
  "id": 51539607716,
  "indx": "explorers-pack",
  "name": "Explorer's Pack"
 },
 {
  "cost": {
   "id": 42949673125,
   "quantity": 19
  },
  "equipment_category": "GEAR",
  "id": 51539607717,
  "indx": "priests-pack",
  "name": "Priest's Pack"
 },
 {
  "cost": {
   "id": 42949673126,
   "quantity": 40
  },
  "equipment_category": "GEAR",
  "id": 51539607718,
  "indx": "scholars-pack",
  "name": "Scholar's Pack"
 },
 {
  "cost": {
   "id": 42949673127,
   "quantity": 50
  },
  "equipment_category": "TOOL",
  "id": 51539607719,
  "indx": "alchemists-supplies",
  "name": "Alchemist's Supplies",
  "weight": 8
 },
 {
  "cost": {
   "id": 42949673128,
   "quantity": 20
  },
  "equipment_category": "TOOL",
  "id": 51539607720,
  "indx": "brewers-supplies",
  "name": "Brewer's Supplies",
  "weight": 9
 },
 {
  "cost": {
   "id": 42949673129,
   "quantity": 10
  },
  "equipment_category": "TOOL",
  "id": 51539607721,
  "indx": "calligraphers-supplies",
  "name": "Calligrapher's Supplies",
  "weight": 5
 },
 {
  "cost": {
   "id": 42949673130,
   "quantity": 8
  },
  "equipment_category": "TOOL",
  "id": 51539607722,
  "indx": "carpenters-tools",
  "name": "Carpenter's Tools",
  "weight": 6
 },
 {
  "cost": {
   "id": 42949673131,
   "quantity": 15
  },
  "equipment_category": "TOOL",
  "id": 51539607723,
  "indx": "cartographers-tools",
  "name": "Cartographer's Tools",
  "weight": 6
 },
 {
  "cost": {
   "id": 42949673132,
   "quantity": 5
  },
  "equipment_category": "TOOL",
  "id": 51539607724,
  "indx": "cobblers-tools",
  "name": "Cobbler's Tools",
  "weight": 5
 },
 {
  "cost": {
   "id": 42949673133,
   "quantity": 1
  },
  "equipment_category": "TOOL",
  "id": 51539607725,
  "indx": "cooks-utensils",
  "name": "Cook's utensils",
  "weight": 8
 },
 {
  "cost": {
   "id": 42949673134,
   "quantity": 30
  },
  "equipment_category": "TOOL",
  "id": 51539607726,
  "indx": "glassblowers-tools",
  "name": "Glassblower's Tools",
  "weight": 5
 },
 {
  "cost": {
   "id": 42949673135,
   "quantity": 25
  },
  "equipment_category": "TOOL",
  "id": 51539607727,
  "indx": "jewelers-tools",
  "name": "Jeweler's Tools",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673136,
   "quantity": 5
  },
  "equipment_category": "TOOL",
  "id": 51539607728,
  "indx": "leatherworkers-tools",
  "name": "Leatherworker's Tools",
  "weight": 5
 },
 {
  "cost": {
   "id": 42949673137,
   "quantity": 10
  },
  "equipment_category": "TOOL",
  "id": 51539607729,
  "indx": "masons-tools",
  "name": "Mason's Tools",
  "weight": 8
 },
 {
  "cost": {
   "id": 42949673138,
   "quantity": 10
  },
  "equipment_category": "TOOL",
  "id": 51539607730,
  "indx": "painters-supplies",
  "name": "Painter's Supplies",
  "weight": 5
 },
 {
  "cost": {
   "id": 42949673139,
   "quantity": 10
  },
  "equipment_category": "TOOL",
  "id": 51539607731,
  "indx": "potters-tools",
  "name": "Potter's Tools",
  "weight": 3
 },
 {
  "cost": {
   "id": 42949673140,
   "quantity": 20
  },
  "equipment_category": "TOOL",
  "id": 51539607732,
  "indx": "smiths-tools",
  "name": "Smith's Tools",
  "weight": 8
 },
 {
  "cost": {
   "id": 42949673141,
   "quantity": 50
  },
  "equipment_category": "TOOL",
  "id": 51539607733,
  "indx": "tinkers-tools",
  "name": "Tinker's Tools",
  "weight": 10
 },
 {
  "cost": {
   "id": 42949673142,
   "quantity": 1
  },
  "equipment_category": "TOOL",
  "id": 51539607734,
  "indx": "weavers-tools",
  "name": "Weaver's Tools",
  "weight": 5
 },
 {
  "cost": {
   "id": 42949673143,
   "quantity": 1
  },
  "equipment_category": "TOOL",
  "id": 51539607735,
  "indx": "woodcarvers-tools",
  "name": "Woodcarver's Tools",
  "weight": 5
 },
 {
  "cost": {
   "id": 42949673144,
   "quantity": 1
  },
  "equipment_category": "TOOL",
  "id": 51539607736,
  "indx": "dice-set",
  "name": "Dice Set"
 },
 {
  "cost": {
   "id": 42949673145,
   "quantity": 5
  },
  "equipment_category": "TOOL",
  "id": 51539607737,
  "indx": "playing-card-set",
  "name": "Playing Card Set"
 },
 {
  "cost": {
   "id": 42949673146,
   "quantity": 30
  },
  "equipment_category": "TOOL",
  "id": 51539607738,
  "indx": "bagpipes",
  "name": "Bagpipes",
  "weight": 6
 },
 {
  "cost": {
   "id": 42949673147,
   "quantity": 6
  },
  "equipment_category": "TOOL",
  "id": 51539607739,
  "indx": "drum",
  "name": "Drum",
  "weight": 3
 },
 {
  "cost": {
   "id": 42949673148,
   "quantity": 25
  },
  "equipment_category": "TOOL",
  "id": 51539607740,
  "indx": "dulcimer",
  "name": "Dulcimer",
  "weight": 10
 },
 {
  "cost": {
   "id": 42949673149,
   "quantity": 2
  },
  "equipment_category": "TOOL",
  "id": 51539607741,
  "indx": "flute",
  "name": "Flute",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673150,
   "quantity": 35
  },
  "equipment_category": "TOOL",
  "id": 51539607742,
  "indx": "lute",
  "name": "Lute",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673151,
   "quantity": 30
  },
  "equipment_category": "TOOL",
  "id": 51539607743,
  "indx": "lyre",
  "name": "Lyre",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673152,
   "quantity": 3
  },
  "equipment_category": "TOOL",
  "id": 51539607744,
  "indx": "horn",
  "name": "Horn",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673153,
   "quantity": 12
  },
  "equipment_category": "TOOL",
  "id": 51539607745,
  "indx": "pan-flute",
  "name": "Pan flute",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673154,
   "quantity": 2
  },
  "equipment_category": "TOOL",
  "id": 51539607746,
  "indx": "shawm",
  "name": "Shawm",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673155,
   "quantity": 30
  },
  "equipment_category": "TOOL",
  "id": 51539607747,
  "indx": "viol",
  "name": "Viol",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673156,
   "quantity": 25
  },
  "equipment_category": "TOOL",
  "id": 51539607748,
  "indx": "navigators-tools",
  "name": "Navigator's Tools",
  "weight": 2
 },
 {
  "cost": {
   "id": 42949673157,
   "quantity": 25
  },
  "equipment_category": "TOOL",
  "id": 51539607749,
  "indx": "thieves-tools",
  "name": "Thieves' Tools",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673158,
   "quantity": 50
  },
  "equipment_category": "VEHICLE",
  "id": 51539607750,
  "indx": "camel",
  "name": "Camel"
 },
 {
  "cost": {
   "id": 42949673159,
   "quantity": 8
  },
  "equipment_category": "VEHICLE",
  "id": 51539607751,
  "indx": "donkey",
  "name": "Donkey"
 },
 {
  "cost": {
   "id": 42949673160,
   "quantity": 8
  },
  "equipment_category": "VEHICLE",
  "id": 51539607752,
  "indx": "mule",
  "name": "Mule"
 },
 {
  "cost": {
   "id": 42949673161,
   "quantity": 200
  },
  "equipment_category": "VEHICLE",
  "id": 51539607753,
  "indx": "elephant",
  "name": "Elephant"
 },
 {
  "cost": {
   "id": 42949673162,
   "quantity": 50
  },
  "equipment_category": "VEHICLE",
  "id": 51539607754,
  "indx": "horse-draft",
  "name": "Horse, draft"
 },
 {
  "cost": {
   "id": 42949673163,
   "quantity": 75
  },
  "equipment_category": "VEHICLE",
  "id": 51539607755,
  "indx": "horse-riding",
  "name": "Horse, riding"
 },
 {
  "cost": {
   "id": 42949673164,
   "quantity": 25
  },
  "equipment_category": "VEHICLE",
  "id": 51539607756,
  "indx": "mastiff",
  "name": "Mastiff"
 },
 {
  "cost": {
   "id": 42949673165,
   "quantity": 30
  },
  "equipment_category": "VEHICLE",
  "id": 51539607757,
  "indx": "pony",
  "name": "Pony"
 },
 {
  "cost": {
   "id": 42949673166,
   "quantity": 400
  },
  "equipment_category": "VEHICLE",
  "id": 51539607758,
  "indx": "warhorse",
  "name": "Warhorse"
 },
 {
  "cost": {
   "id": 42949673167,
   "quantity": 20
  },
  "equipment_category": "VEHICLE",
  "id": 51539607759,
  "indx": "barding-padded",
  "name": "Barding: Padded",
  "weight": 16
 },
 {
  "cost": {
   "id": 42949673168,
   "quantity": 40
  },
  "equipment_category": "VEHICLE",
  "id": 51539607760,
  "indx": "barding-leather",
  "name": "Barding: Leather",
  "weight": 20
 },
 {
  "cost": {
   "id": 42949673169,
   "quantity": 180
  },
  "equipment_category": "VEHICLE",
  "id": 51539607761,
  "indx": "barding-studded-leather",
  "name": "Barding: Studded Leather",
  "weight": 26
 },
 {
  "cost": {
   "id": 42949673170,
   "quantity": 40
  },
  "equipment_category": "VEHICLE",
  "id": 51539607762,
  "indx": "barding-hide",
  "name": "Barding: Hide",
  "weight": 24
 },
 {
  "cost": {
   "id": 42949673171,
   "quantity": 200
  },
  "equipment_category": "VEHICLE",
  "id": 51539607763,
  "indx": "barding-chain-shirt",
  "name": "Barding: Chain shirt",
  "weight": 40
 },
 {
  "cost": {
   "id": 42949673172,
   "quantity": 200
  },
  "equipment_category": "VEHICLE",
  "id": 51539607764,
  "indx": "barding-scale-mail",
  "name": "Barding: Scale mail",
  "weight": 90
 },
 {
  "cost": {
   "id": 42949673173,
   "quantity": 1600
  },
  "equipment_category": "VEHICLE",
  "id": 51539607765,
  "indx": "barding-breastplate",
  "name": "Barding: Breastplate",
  "weight": 40
 },
 {
  "cost": {
   "id": 42949673174,
   "quantity": 3000
  },
  "equipment_category": "VEHICLE",
  "id": 51539607766,
  "indx": "barding-half-plate",
  "name": "Barding: Half plate",
  "weight": 80
 },
 {
  "cost": {
   "id": 42949673175,
   "quantity": 12
  },
  "equipment_category": "VEHICLE",
  "id": 51539607767,
  "indx": "barding-ring-mail",
  "name": "Barding: Ring mail",
  "weight": 80
 },
 {
  "cost": {
   "id": 42949673176,
   "quantity": 300
  },
  "equipment_category": "VEHICLE",
  "id": 51539607768,
  "indx": "barding-chain-mail",
  "name": "Barding: Chain mail",
  "weight": 110
 },
 {
  "cost": {
   "id": 42949673177,
   "quantity": 800
  },
  "equipment_category": "VEHICLE",
  "id": 51539607769,
  "indx": "barding-splint",
  "name": "Barding: Splint",
  "weight": 120
 },
 {
  "cost": {
   "id": 42949673178,
   "quantity": 6000
  },
  "equipment_category": "VEHICLE",
  "id": 51539607770,
  "indx": "barding-plate",
  "name": "Barding: Plate",
  "weight": 130
 },
 {
  "cost": {
   "id": 42949673179,
   "quantity": 2
  },
  "equipment_category": "VEHICLE",
  "id": 51539607771,
  "indx": "bit-and-bridle",
  "name": "Bit and bridle",
  "weight": 1
 },
 {
  "cost": {
   "id": 42949673180,
   "quantity": 100
  },
  "equipment_category": "VEHICLE",
  "id": 51539607772,
  "indx": "carriage",
  "name": "Carriage",
  "weight": 600
 },
 {
  "cost": {
   "id": 42949673181,
   "quantity": 15
  },
  "equipment_category": "VEHICLE",
  "id": 51539607773,
  "indx": "cart",
  "name": "Cart",
  "weight": 200
 },
 {
  "cost": {
   "id": 42949673182,
   "quantity": 250
  },
  "equipment_category": "VEHICLE",
  "id": 51539607774,
  "indx": "chariot",
  "name": "Chariot",
  "weight": 100
 },
 {
  "cost": {
   "id": 42949673183,
   "quantity": 5
  },
  "equipment_category": "VEHICLE",
  "id": 51539607775,
  "indx": "animal-feed-1-day",
  "name": "Animal Feed (1 day)",
  "weight": 10
 },
 {
  "cost": {
   "id": 42949673184,
   "quantity": 60
  },
  "equipment_category": "VEHICLE",
  "id": 51539607776,
  "indx": "saddle-exotic",
  "name": "Saddle, Exotic",
  "weight": 50
 },
 {
  "cost": {
   "id": 42949673185,
   "quantity": 20
  },
  "equipment_category": "VEHICLE",
  "id": 51539607777,
  "indx": "saddle-military",
  "name": "Saddle, Military",
  "weight": 30
 },
 {
  "cost": {
   "id": 42949673186,
   "quantity": 5
  },
  "equipment_category": "VEHICLE",
  "id": 51539607778,
  "indx": "saddle-pack",
  "name": "Saddle, Pack",
  "weight": 15
 },
 {
  "cost": {
   "id": 42949673187,
   "quantity": 10
  },
  "equipment_category": "VEHICLE",
  "id": 51539607779,
  "indx": "saddle-riding",
  "name": "Saddle, Riding",
  "weight": 25
 },
 {
  "cost": {
   "id": 42949673188,
   "quantity": 4
  },
  "equipment_category": "VEHICLE",
  "id": 51539607780,
  "indx": "saddlebags",
  "name": "Saddlebags",
  "weight": 8
 },
 {
  "cost": {
   "id": 42949673189,
   "quantity": 20
  },
  "equipment_category": "VEHICLE",
  "id": 51539607781,
  "indx": "sled",
  "name": "Sled",
  "weight": 300
 },
 {
  "cost": {
   "id": 42949673190,
   "quantity": 5
  },
  "equipment_category": "VEHICLE",
  "id": 51539607782,
  "indx": "stabling-1-day",
  "name": "Stabling (1 day)"
 },
 {
  "cost": {
   "id": 42949673191,
   "quantity": 35
  },
  "equipment_category": "VEHICLE",
  "id": 51539607783,
  "indx": "wagon",
  "name": "Wagon",
  "weight": 400
 },
 {
  "cost": {
   "id": 42949673192,
   "quantity": 30000
  },
  "equipment_category": "VEHICLE",
  "id": 51539607784,
  "indx": "galley",
  "name": "Galley"
 },
 {
  "cost": {
   "id": 42949673193,
   "quantity": 3000
  },
  "equipment_category": "VEHICLE",
  "id": 51539607785,
  "indx": "keelboat",
  "name": "Keelboat"
 },
 {
  "cost": {
   "id": 42949673194,
   "quantity": 10000
  },
  "equipment_category": "VEHICLE",
  "id": 51539607786,
  "indx": "longship",
  "name": "Longship"
 },
 {
  "cost": {
   "id": 42949673195,
   "quantity": 50
  },
  "equipment_category": "VEHICLE",
  "id": 51539607787,
  "indx": "rowboat",
  "name": "Rowboat"
 },
 {
  "cost": {
   "id": 42949673196,
   "quantity": 10000
  },
  "equipment_category": "VEHICLE",
  "id": 51539607788,
  "indx": "sailing-ship",
  "name": "Sailing ship"
 },
 {
  "cost": {
   "id": 42949673197,
   "quantity": 25000
  },
  "equipment_category": "VEHICLE",
  "id": 51539607789,
  "indx": "warship",
  "name": "Warship"
 }
]
---

[TestEquipmentPopulator - 2]
[
 {
  "category_range": "Simple Melee",
  "cost": {
   "quantity": 1,
   "unit": "sp"
  },
  "damage": {
   "damage_dice": "1d4",
   "damage_type": {
    "index": "bludgeoning"
   }
  },
  "equipment_category": {
   "index": "weapon"
  },
  "index": "club",
  "name": "Club",
  "properties": [
   {
    "index": "weap-light"
   },
   {
    "index": "weap-monk"
   }
  ],
  "range": {
   "normal": 5
  },
  "throw_range": {
   "normal": 0
  },
  "weapon_category": "Simple",
  "weapon_range": "Melee",
  "weight": 2
 },
 {
  "armor_category": "Light",
  "armor_class": {
   "base": 11,
   "dex_bonus": true
  },
  "cost": {
   "quantity": 5,
   "unit": "gp"
  },
  "equipment_category": {
   "index": "armor"
  },
  "index": "padded-armor",
  "name": "Padded Armor",
  "stealth_disadvantage": true,
  "str_minimum": 0,
  "weight": 8
 },
 {
  "contents": [
   {
    "item": {
     "index": "backpack"
    },
    "quantity": 1
   },
   {
    "item": {
     "index": "book"
    },
    "quantity": 1
   },
   {
    "item": {
     "index": "ink-1-ounce-bottle"
    },
    "quantity": 1
   },
   {
    "item": {
     "index": "ink-pen"
    },
    "quantity": 1
   },
   {
    "item": {
     "index": "parchment-one-sheet"
    },
    "quantity": 10
   },
   {
    "item": {
     "index": "little-bag-of-sand"
    },
    "quantity": 1
   },
   {
    "item": {
     "index": "small-knife"
    },
    "quantity": 1
   }
  ],
  "cost": {
   "quantity": 40,
   "unit": "gp"
  },
  "equipment_category": {
   "index": "adventuring-gear"
  },
  "gear_category": {
   "index": "equipment-packs"
  },
  "index": "scholars-pack",
  "name": "Scholar's Pack"
 },
 {
  "cost": {
   "quantity": 50,
   "unit": "gp"
  },
  "desc": [
   "These special tools include the items needed to pursue a craft or trade. The table shows examples of the most common types of tools, each providing items related to a single craft. Proficiency with a set of artisan's tools lets you add your proficiency bonus to any ability checks you make using the tools in your craft. Each type of artisan's tools requires a separate proficiency."
  ],
  "equipment_category": {
   "index": "tools"
  },
  "index": "alchemists-supplies",
  "name": "Alchemist's Supplies",
  "tool_category": "Artisan's Tools",
  "weight": 8
 },
 {
  "capacity": "1,320 lb.",
  "cost": {
   "quantity": 200,
   "unit": "gp"
  },
  "equipment_category": {
   "index": "mounts-and-vehicles"
  },
  "index": "elephant",
  "name": "Elephant",
  "speed": {
   "quantity": 40,
   "unit": "ft/round"
  },
  "vehicle_category": "Mounts and Other Animals"
 }
]
---
